AmazonClone/src/App.css
body {
  margin:0;
  color:white;
}

.header {
  outline: 3px solid red;
}

.nav-belt {
  background-color: #131921;
  display: flex;
height:60px

}

.slot {
  width:auto;
  margin: .5rem;
}
.slot:hover {
  outline: 1.5px solid white;
}
.nav-middle {
  width: auto;
  outline: 3px solid red;
  flex: 1 1 auto;
}
.nav-left {
  width: auto;
  display: flex;
  outline: 3px solid red

}
.nav-right {
  width: auto;
  outline: 3px solid red;
  display: flex;
}
.nav-search {
  outline: 3px solid blue;
  margin-inline:1rem;
  border-radius: 5px;

}

.nav-fill {
  display: flex;
  outline: 3px solid blue;
  flex: 1 1 auto;

}

form {
  display: flex;
}
.nav-input {
  display: flex;
  width: 100%;
  padding: 7px 10px 10px 0;

  height:38px
}

.hello-block {
  display: flex;
  flex-flow: column nowrap;
}
.nav-main {
  background-color: #232f3e;
  height:39px;
}

.nav-a {
  text-decoration: none;
  color: white;
}

